# graphify-obsidian-reverse-engineering

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: GRAPH_REPORT.md  graph.html  graph.json
config/: logging_config.json  rate_limits.json  setup.json
docs/: DOCS_SIGNOFF.md  EXTENSIONS.md  GRAPHIFY_SETUP.md  Improvements_to_keep_in_mind.md  PLAN.md  PRD.md  PRD_agent_workflow.md  PRD_graph_analysis.md  PRD_research_questions.md  PRD_token_efficiency.md  PROMPT_BOOK.md  TODO.md  assignment_brief.md  init_prd.md
notebooks/: results.ipynb
obsidian/: hot.md  index.md
obsidian/nodes/: main.md  snippets_foobar.md  snippets_foobar_foo.md  snippets_init.md  snippets_io.md  snippets_io_average_paid_loans.md  snippets_io_calculate_paid_loans.md  snippets_loop.md  (+3 more)
reports/: architecture.md  before_after.md  recommendations.json  recommendations.md  root_cause.md  token_efficiency.md
runs/: README.md
scripts/: check_line_limit.py  secret_scan.py
tests/: test_comparison.py  test_config.py  test_crew.py  test_cycles.py  test_efficiency.py  test_gate.py  test_gatekeeper.py  test_graph_loader.py  test_graphify_adapter.py  test_grphify_runner.py  test_guards.py  test_impact.py  test_loop.py  test_main.py  test_metrics.py  test_model_client.py  test_models.py  test_obsidian_sync.py  test_parallel.py  test_recommendation.py  test_refactor.py  test_repo_loader.py  test_reverse_engineer.py  test_roles.py  test_sdk.py  test_smells.py  test_study_baseline.py  test_study_guided.py  test_verification.py  test_version.py
(+76 files in other folders)
